layout bug fixes

--- a/packages/con-tracker-client/styles/components/Footer.module.css
+++ b/packages/con-tracker-client/styles/components/Footer.module.css
@@ -1,5 +1,6 @@
 .contactWrapper {
   background: rgba(0, 106, 203, 0.69);
+  overflow: hidden;
 }
 
 .copyrightWrapper {
